--- a/ECCCShuttle/package.json
+++ b/ECCCShuttle/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
-    "react-native-keyboard-aware-scroll-view": "^0.2.8"
+    "react-native-keyboard-aware-scroll-view": "^0.2.8",
+    "react-native-modal": "^2.3.2"
   },
   "devDependencies": {
     "babel-jest": "20.0.0",
