--- a/ECCCShuttle/package.json
+++ b/ECCCShuttle/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
+    "react-native-material-ui": "^1.12.0",
     "react-native-modal": "^2.3.2"
   },
   "devDependencies": {
