--- a/ECCCShuttle/package.json
+++ b/ECCCShuttle/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-camera": "^0.10.0",
     "react-native-modal": "^2.5.0",
+    "react-native-qrcode-scanner": "0.0.14",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
