--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "ECCCShuttle",
+  "name": "ecccshuttle",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^8.0.0",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
     "jest-expo": "~20.0.0",
+    "prettier-eslint": "^8.1.1",
     "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -13,7 +20,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "eslint": "eslint"
   },
   "jest": {
     "preset": "jest-expo"
