login top level stack navigator

--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -6,6 +6,7 @@
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prop-types": 0,
     "no-use-before-define": ["error", { "variables": false }],
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "comma-dangle": 0
   }
 }
