fixed authorization header not being passed through

--- a/shuttleapi/public/.htaccess
+++ b/shuttleapi/public/.htaccess
@@ -14,4 +14,8 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Allow the Authorization header to be passed through...
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
