login button gets api token

--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -2,11 +2,17 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "plugins": ["react", "jsx-a11y", "import"],
+  "globals": {
+    "fetch": false
+  },
   "rules": {
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prop-types": 0,
     "no-use-before-define": ["error", { "variables": false }],
     "linebreak-style": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "arrow-parens": 0,
+    "quotes": 0,
+    "arrow-body-style": 0
   }
 }
