keyboard dismiss after login

--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -8,11 +8,12 @@
   "rules": {
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prop-types": 0,
+    "react/jsx-boolean-value": 0,
     "no-use-before-define": ["error", { "variables": false }],
     "linebreak-style": 0,
     "comma-dangle": 0,
     "arrow-parens": 0,
     "quotes": 0,
-    "arrow-body-style": 0
+    "arrow-body-style": 0,
   }
 }
