--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,6 +27,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
