--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -18,6 +18,7 @@
     "arrow-body-style": 0,
     "no-else-return": 0,
     "no-alert": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "no-confusing-arrow": 0
   }
 }
