--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^20.0.0",
+    "moment": "^2.19.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-modal": "^4.0.0",
