--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,10 +29,10 @@
   "dependencies": {
     "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
-    "expo": "^20.0.0",
+    "expo": "^21.0.2",
     "moment": "^2.19.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0",
+    "react-native": "0.48.4",
     "react-native-modal": "^4.0.0",
     "react-native-qrcode-scanner": "^0.0.17",
     "react-navigation": "^1.0.0-beta.11"
