--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,5 +1,18 @@
 {
   "expo": {
-    "sdkVersion": "21.0.0"
+    "name": "ECCC Shuttle",
+    "icon": "./assets/captainshuttle.png",
+    "version": "1.0.0",
+    "slug": "eccc-shuttle",
+    "sdkVersion": "21.0.0",
+    "loading": {
+      "hideExponentText": true
+    },
+    "ios": {
+      "bundleIdentifier": "ca.eccc.shuttle"
+    },
+    "android": {
+      "package": "ca.eccc.shuttle"
+    }
   }
 }
