--- a/mobile/app.json
+++ b/mobile/app.json
@@ -8,6 +8,9 @@
     "loading": {
       "hideExponentText": true
     },
+    "androidStatusBar": {
+      "backgroundColor": "#000000"
+    },
     "ios": {
       "bundleIdentifier": "ca.eccc.shuttle"
     },
