--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.19.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
+    "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-modal": "^4.0.0",
     "react-native-qrcode-scanner": "^0.0.17",
     "react-navigation": "^1.0.0-beta.11"
