changed logout button position and style

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -8,6 +8,9 @@
     "loading": {
       "hideExponentText": true
     },
+    "packagerOpts": {
+      "assetExts": ["ttf"]
+    },
     "ios": {
       "bundleIdentifier": "ca.eccc.shuttle"
     },
