--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,6 +27,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.2.0",
     "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^21.0.2",
