--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -19,6 +19,7 @@
     "no-else-return": 0,
     "no-alert": 0,
     "no-underscore-dangle": 0,
-    "no-confusing-arrow": 0
+    "no-confusing-arrow": 0,
+    "no-useless-escape": 0
   }
 }
