--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -24,6 +24,7 @@
     "no-alert": 0,
     "no-underscore-dangle": 0,
     "no-confusing-arrow": 0,
-    "no-useless-escape": 0
+    "no-useless-escape": 0,
+    "indent": 0
   }
 }
